--- a/src/rootLayout/fonts.css
+++ b/src/rootLayout/fonts.css
@@ -1,7 +1,6 @@
 @font-face {
-    font-family: 'Nunito';
-    font-style: normal;
-    font-display: swap;
-    src: local('Nunito-Regular'),
-      url('./assets/fonts/Nunito-Regular.ttf') format('ttf');
-  }
+  font-family: 'Nunito';
+  font-style: normal;
+  font-display: swap;
+  src: local('Nunito-Regular'), url('./assets/fonts/Nunito-Regular.ttf') format('ttf');
+}
